syntax = "proto3";

option go_package = "github.com/spiridonov/yellowstone/monstera";

package pro.spiridonov.monstera;

import "google/protobuf/timestamp.proto";

message RPCHeader {
  int64 protocol_version = 1;
  bytes id = 2;
  bytes addr = 3;
}

message Log {
  enum LogType {
    LOG_TYPE_COMMAND = 0;
    LOG_TYPE_NOOP = 1;
    LOG_TYPE_ADD_PEER_DEPRECATED = 2;
    LOG_TYPE_REMOVE_PEER_DEPRECATED = 3;
    LOG_TYPE_BARRIER = 4;
    LOG_TYPE_CONFIGURATION = 5;
  }
  uint64 index = 1;
  uint64 term = 2;
  LogType type = 3;
  bytes data = 4;
  bytes extensions = 5;
  google.protobuf.Timestamp appended_at = 6;
}

message AppendEntriesRequest {
  RPCHeader rpc_header = 1;
  uint64 term = 2;
  uint64 prev_log_entry = 4;
  uint64 prev_log_term = 5;
  repeated Log entries = 6;
  uint64 leader_commit_index = 7;
  string target_replica_id = 8;
}

message AppendEntriesResponse {
  RPCHeader rpc_header = 1;
  uint64 term = 2;
  uint64 last_log = 3;
  bool success = 4;
  bool no_retry_backoff = 5;
}

message RequestVoteRequest {
  RPCHeader rpc_header = 1;
  uint64 term = 2;
  uint64 last_log_index = 4;
  uint64 last_log_term = 5;
  bool leadership_transfer = 6;
  string target_replica_id = 7;
}

message RequestVoteResponse {
  RPCHeader rpc_header = 1;
  uint64 term = 2;
  bytes peers = 3;
  bool granted = 4;
}

message TimeoutNowRequest {
  RPCHeader rpc_header = 1;
  string target_replica_id = 2;
}

message TimeoutNowResponse {
  RPCHeader rpc_header = 1;
}

// The first InstallSnapshotRequest on the stream contains all the metadata.
// All further messages contain only data.
message InstallSnapshotRequest {
  RPCHeader rpc_header = 1;
  int64 snapshot_version = 11;
  uint64 term = 2;
  bytes leader = 3;
  uint64 last_log_index = 4;
  uint64 last_log_term = 5;
  bytes peers = 6;
  bytes configuration = 7;
  uint64 configuration_index = 8;
  int64 size = 9;

  bytes data = 10;

  string target_replica_id = 12;
}

message InstallSnapshotResponse {
  RPCHeader rpc_header = 1;
  uint64 term = 2;
  bool success = 3;
}

message MonsteraCommand {
  bytes payload = 1;
}
